--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   "dependencies": {
     "next": "10.0.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.8",
+    "@types/react": "^16.9.56",
+    "@types/styled-components": "^5.1.4",
+    "typescript": "^4.0.5"
   }
 }
