--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "next": "10.0.2",
     "react": "17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.1"
