--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^3.6.6",
     "next": "10.0.2",
     "react": "17.0.1",
+    "react-burger-menu": "^3.0.6",
     "react-chartjs-2": "2.11.1",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
