--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "2.9.4",
     "classnames": "^2.3.1",
     "framer-motion": "2.9.5",
+    "influx": "^5.9.2",
     "mongodb": "^3.6.6",
     "next": "10.0.2",
     "react": "17.0.1",
